--- a/pages/app.css
+++ b/pages/app.css
@@ -5,6 +5,10 @@ body {
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+a {
+	color: #efdb50;
+}
+
 main {
 	max-width: 50rem;
 	margin: 0 auto;
@@ -51,7 +55,7 @@ li a {
 }
 
 form > a {
-	color: black;
+	color: #1c1c1c;
 	padding: 0.6rem 0.5rem;
 	text-align: center;
 	font-size: 1.2rem;
@@ -84,16 +88,47 @@ form > a:hover {
 	justify-content: space-between;
 }
 
-code {
+.command {
+	position: relative;
 	cursor: pointer;
 	border-radius: 4px;
-	font-size: 0.8rem;
+	font-size: 1.2rem;
 	display: block;
 	background: #1c1c1c;
 	padding: 1rem 2rem;
 	word-break: break-all;
 }
 
-code:hover {
+@keyframes popup {
+	0% {
+		top: 0;
+	}
+
+	50% {
+		opacity: 1;
+	}
+
+	100% {
+		top: -2rem;
+		opacity: 0;
+	}
+}
+
+.command.animated::after {
+	animation: 2s ease-in popup;
+}
+
+.command::after {
+	position: absolute;
+	padding: 0.2rem 0.3rem;
+	background: #efdb50;
+	color: #1c1c1c;
+	border-radius: 4px;
+	right: 0;
+	content: 'Command copied in clipboard';
+	opacity: 0;
+}
+
+.command:hover {
 	background: #444444;
 }
