--- a/pages/app.css
+++ b/pages/app.css
@@ -1,53 +1,5 @@
-body {
-	background-color: #282c34;
-	color: white;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
 a {
 	color: #efdb50;
-}
-
-main {
-	max-width: 50rem;
-	padding: 0 0.8rem;
-	margin: 0 auto;
-}
-
-footer {
-	margin-top: 3rem;
-	text-align: right;
-}
-
-main > article {
-	margin-bottom: 2rem;
-}
-
-.github {
-	margin-left: auto;
-}
-
-a {
-	color: #efdb50;
-}
-
-a:hover,
-.github:focus {
-	color: white;
-}
-
-nav {
-	padding: 1rem 0 3rem;
-}
-
-nav > ul {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	list-style: none;
-	margin: 0;
-	padding: 0;
 }
 
 nav > ul > li {
@@ -83,6 +35,10 @@ form {
 	margin-top: 1rem;
 }
 
+form input {
+	color: #1c1c1c;
+}
+
 form > a {
 	color: #1c1c1c;
 	padding: 0.6rem 0.5rem;
@@ -102,67 +58,12 @@ form > a:hover {
 	transition: all 200ms ease-out;
 }
 
-.chapo header {
-	margin-top: 2rem;
-	display: flex;
-	align-items: center;
-}
-
-.chapo header h1 {
-	margin-left: 2rem;
-}
-
 .generation-block {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding-bottom: 1rem;
 	justify-content: space-between;
-}
-
-.command {
-	position: relative;
-	cursor: pointer;
-	border-radius: 4px;
-	font-size: 1.2rem;
-	display: block;
-	background: #1c1c1c;
-	padding: 1rem 2rem;
-	word-break: break-all;
-}
-
-@keyframes popup {
-	0% {
-		top: 0;
-	}
-
-	50% {
-		opacity: 1;
-	}
-
-	100% {
-		top: -2rem;
-		opacity: 0;
-	}
-}
-
-.command.animated::after {
-	animation: 2s ease-in popup;
-}
-
-.command::after {
-	position: absolute;
-	padding: 0.2rem 0.3rem;
-	background: #efdb50;
-	color: #1c1c1c;
-	border-radius: 4px;
-	right: 0;
-	content: 'Command copied in clipboard';
-	opacity: 0;
-}
-
-.command:hover {
-	background: #444444;
 }
 
 @media screen and (min-width: 768px) {
