--- a/styles/app/Footer.module.css
+++ b/styles/app/Footer.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 20px;
+	gap: 50px;
 	padding-inline: 40px;
 	padding-top: 40px;
 
@@ -14,8 +14,8 @@
 
 		hr {
 			height: 1px;
-			border-top: 2px solid transparent;
-			border-image: linear-gradient(90deg, transparent, white) 1;
+			border-top: 1px solid transparent;
+			border-image: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.5)) 1;
 			width: 100%;
 
 			&:last-child {
