--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -3,6 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 	gap: 50px;
 	margin-top: 40px;
 	padding-top: 50px;
