--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -11,7 +11,7 @@
 	border-image: linear-gradient(
 			90deg,
 			transparent,
-			rgba(255, 255, 255, 0.5),
+			var(--separator),
 			transparent
 		)
 		1;
