self review: updated logo by using svg and css

--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -16,9 +16,9 @@
 		)
 		1;
 
-	.logo {
+	.footerLogo {
 		position: absolute;
-		top: -15px;
+		top: -20px;
 		background: var(--background);
 		padding-inline: 20px;
 		width: 60px;
