--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -6,6 +6,7 @@
 	text-align: center;
 	gap: 50px;
 	margin-top: 40px;
+	margin-bottom: 20px;
 	padding-top: 50px;
 	border-top: 1px solid transparent;
 	border-image: linear-gradient(
@@ -27,5 +28,12 @@
 	.vercelLight {
 		display: block;
 		width: max-content;
+	}
+
+	.bottomFooter {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 }
