--- a/styles/app/layout/footer.module.css
+++ b/styles/app/layout/footer.module.css
@@ -30,7 +30,7 @@
 		width: max-content;
 	}
 
-	.bottomFooter {
+	.bottomBar {
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
@@ -40,7 +40,7 @@
 }
 
 @media screen and (max-width: 530px) {
-	.bottomFooter {
+	.bottomBar {
 		flex-direction: column;
 	}
 }
