--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -18,8 +18,7 @@
 				right: 10px;
 				top: 50%;
 				transform: translateY(-50%);
-				background: var(--arrow) center
-					no-repeat;
+				background: var(--arrow) center no-repeat;
 				background-size: contain;
 			}
 
