add fold button methods and styles

--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -98,3 +98,45 @@
 		}
 	}
 }
+
+[data-folded="true"] {
+	.sideBarNav {
+		overflow: visible;
+
+		.topLevel {
+			width: max-content;
+
+			.topLevelText {
+				display: none;
+			}
+
+			> details {
+				position: relative;
+				overflow: visible;
+
+				> summary {
+					&::after {
+						display: none;
+					}
+				}
+
+				> ul {
+					position: absolute;
+					overflow: scroll;
+					width: 270px;
+					height: 400px;
+					top: 0;
+					left: 110%;
+					background: var(--color-background);
+					border: 1px solid var(--switch-border);
+					box-shadow: 0 0 15px rgba(0,0,0,0.2);
+					border-radius: 10px;
+					padding: 20px;
+					z-index: 10;
+
+				}
+			}
+		}
+
+	}
+}
