--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -74,7 +74,7 @@
 		transform: rotate(90deg);
 	}
 
-	&[data-folded="true"] {
+	&[data-folded='true'] {
 		align-items: center;
 		width: 110px;
 
@@ -85,7 +85,6 @@
 		footer {
 			flex-direction: column;
 			gap: 10px;
-
 		}
 	}
 }
