review changes: changed key

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,8 +78,7 @@ main {
 		justify-content: space-between;
 		gap: 30px;
 
-		article {
-			max-width: 90rem;
+		section {
 			width: 100%;
 		}
 	}
