--- a/styles/app/components/sidebar/activeLink.module.css
+++ b/styles/app/components/sidebar/activeLink.module.css
@@ -2,36 +2,36 @@
 	display: block;
 	border-radius: 5px;
 	width: 45%;
+	color: var(--color-text);
 
-	.content {
-		color: var(--color-text);
+	.thumbnailCard {
+		width: 100%;
+		text-align: center;
 
-		.thumbnailCard {
-			width: 100%;
-			text-align: center;
-
-			> span {
-				padding: 5px;
-				display: block;
-				height: auto;
-				border: 2px solid transparent;
-				border-radius: 5px;
-
-				> div {
-					max-height: 60px;
-					max-width: 100%;
-					border-radius: 5px;
-				}
-			}
+		> span {
+			padding: 5px;
+			display: block;
+			height: auto;
+			border: 2px solid transparent;
+			border-radius: 5px;
 
 			> div {
-				padding: 10px;
+				max-height: 60px;
+				max-width: 100%;
+				border-radius: 5px;
+			}
+		}
+
+		> div {
+			padding: 10px;
+
+			h3 {
 				font-weight: 500;
 				font-size: 0.9rem;
+			}
 
-				p {
-					font-weight: 300;
-				}
+			p {
+				font-weight: 300;
 			}
 		}
 	}
