--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -50,11 +50,14 @@
 
 		&:first-child {
 			margin-top: 0;
-			width: 100%;
-			padding: 5px 10px;
+
+			> a {
+				width: 100%;
+				padding: 5px 10px;
+			}
 		}
 
-		span,
+		&:first-child span,
 		summary > div {
 			display: flex;
 			align-items: center;
