--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@900&display=swap');
-
 .sidebar {
 	display: flex;
 	flex-direction: column;
@@ -30,8 +28,7 @@
 			align-items: center;
 			gap: 10px;
 			font-size: 1.6rem;
-			font-family: MuseoModerno;
-			color: var(--color-wordmark);
+			color: var(--color-logo-wordmark);
 		}
 	}
 
