review changes: renamed snowcamp logo + updated sidebarConfig type

--- a/styles/app/components/sidebar/activeLink.module.css
+++ b/styles/app/components/sidebar/activeLink.module.css
@@ -36,10 +36,7 @@
 		}
 	}
 
-	&:hover {
-		background: var(--switch-background);
-	}
-
+	&:hover,
 	&.active {
 		background: var(--switch-background);
 	}
