review changes: handle duplicated linear gradient

--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -92,13 +92,7 @@
 				> ul {
 					padding-bottom: 10px;
 					border-bottom: 1px solid transparent;
-					border-image: linear-gradient(
-							90deg,
-							transparent,
-							var(--color-separator),
-							transparent
-						)
-						1;
+					border-image: var(--separator);
 				}
 			}
 		}
