--- a/styles/app/components/sidebar/nav.module.css
+++ b/styles/app/components/sidebar/nav.module.css
@@ -26,7 +26,8 @@
 				height: 25px;
 			}
 
-			&:hover, &.selected {
+			&:hover,
+			&.selected {
 				cursor: pointer;
 				background: var(--switch-background);
 			}
