review changes: remove useless css var + used module.css on rootLayout

--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -28,7 +28,7 @@
 			align-items: center;
 			gap: 10px;
 			font-size: 1.6rem;
-			color: var(--color-logo-wordmark);
+			color: var(--color-link);
 		}
 	}
 
