--- a/styles/app/components/sidebar/sidebar.module.css
+++ b/styles/app/components/sidebar/sidebar.module.css
@@ -6,21 +6,14 @@
 	max-width: 315px;
 	width: 100%;
 	height: calc(100vh - 2rem);
-	padding: 20px;
 	background: var(--color-background);
 	border: 2px solid var(--switch-border);
 	border-radius: 10px;
 
 	header {
-		padding-bottom: 15px;
+		padding: 20px 20px 15px;
 		border-bottom: 1px solid transparent;
-		border-image: linear-gradient(
-				90deg,
-				transparent,
-				var(--color-separator),
-				transparent
-			)
-			1;
+		border-image: var(--separator);
 
 		.logoLink {
 			display: flex;
@@ -36,15 +29,9 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		padding-top: 15px;
+		padding: 15px 20px 20px;
 		border-top: 1px solid transparent;
-		border-image: linear-gradient(
-				90deg,
-				transparent,
-				var(--color-separator),
-				transparent
-			)
-			1;
+		border-image: var(--separator);
 
 		.contributeLink {
 			display: flex;
