--- a/styles/app/common/themeRadioGroup.module.css
+++ b/styles/app/common/themeRadioGroup.module.css
@@ -29,8 +29,8 @@
 	}
 }
 
-[data-folded='true'] {
+[aria-expanded='true'] {
 	.switchThemeGroup {
-		transform: scale(0.8);
+		flex-direction: column;
 	}
 }
